added index, MainController and app.js files to project.

--- a/README
+++ b/README
@@ -79,3 +79,8 @@ D:\Git\CodeAcademyAngular>git status
 	To https://github.com/ricbates/CodeAcademyAngular.git
 	   68a005a..3eea147  master -> master
 	Branch master set up to track remote branch master from origin.
+	
+Everything good in the Universe once again! Edits now seen online.
+
+About to add files from training now.
+
